--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,7 @@ $azul:#5E72EB;
 $rosa:#FF9190;
 $naranja:#FEC195;
 $gris:#a3a3a3;
+$blanco:#FCFCFC;
 
 //fonts
 $primaryfont: 'geomanistregular';
@@ -49,6 +50,19 @@ $titlefont:'Fjalla One', sans-serif;
 }
 .marginleft{
   margin-left: 15%;
+  @include ipad{
+    margin-left: 25%;
+  }
+  @include phone{
+    margin-left: 0px;
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+.phonetop{
+  @include phone{
+    margin-top: 50px;
+  }
 }
 
 /*menuToggle*/
@@ -174,10 +188,14 @@ $titlefont:'Fjalla One', sans-serif;
 
 body{
   position: relative;
+  background-color: $blanco;
 }
 .leftnav{
-  @include ipad{
+  @include phone{
     display: none;
+  }
+  @include ipad{
+    width: 20%;
   }
   display: block;
   background-color: $naranja;
@@ -261,5 +279,81 @@ body{
   }
   .socialmedia{
     left: 30%;
+  }
+  @include ipad{
+    width: 25%;
+  }
+}
+
+
+// home *************
+
+.homecontent{
+  background-image: url(imgs/compuwire.gif);
+  background-color: $blanco;
+  width: 100%;
+  height:100vh;
+  background-repeat: no-repeat;
+  background-size:  60% 60%;
+  background-position: bottom center;
+  position: relative;
+  @include desktop{
+    background-size:  35% 50%;
+    background-position: bottom right;
+  }
+  .hometext{
+    position: absolute;
+    width: 80%;
+    top:20%; 
+    @include ipad{
+      position: absolute;
+      top:5%;
+    }
+    @include phone{
+      top: 0px;
+      width: 100%;
+    }
+   
+  }
+  h2{
+    font-family: $primaryfont;
+    font-size: 60px;
+
+    @include ipad{
+      font-size: 36px;
+    }
+  }
+  h1{
+    font-family: $titlefont;
+  }
+}
+
+.cta{
+  font-size: 21px;
+  border: none;
+  padding: 10px 50px;
+  width: 300px;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  background-size: 200%;
+  transition: 0.6s ease;
+  letter-spacing: 1px;
+  background-image: linear-gradient(to left,$rosa,$morado,$rosa);
+  margin-top: 10px;
+}
+a{
+  text-decoration: none;
+}
+.cta:hover{
+  background-position: right;
+}
+
+@include phone{
+  .cta{
+    margin-bottom: 20px;
+    width: 100%;
+    display: block;
+    text-align: center;
   }
 }
