--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 
 @media (max-width: 800px) {
   .phonetop {
-    margin-top: 50px;
+    margin-top: 20px;
   }
 }
 
@@ -333,6 +333,18 @@ body {
 @media (max-width: 1300px) {
   .homecontent h2 {
     font-size: 36px;
+  }
+}
+@media (min-width: 800px) {
+  .homecontent .center {
+    margin-top: 80px;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 1300px) {
+  .homecontent .center {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 .homecontent h1 {
