--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,7 +61,7 @@ $titlefont:'Fjalla One', sans-serif;
 }
 .phonetop{
   @include phone{
-    margin-top: 50px;
+    margin-top: 20px;
   }
 }
 
@@ -313,6 +313,7 @@ body{
       top: 0px;
       width: 100%;
     }
+    
    
   }
   h2{
@@ -321,6 +322,16 @@ body{
 
     @include ipad{
       font-size: 36px;
+    }
+  }
+  .center{
+    @include desktop{
+      margin-top: 80px;
+      margin-bottom: 20px;
+    }
+    @include ipad{
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
   }
   h1{
