--- a/sass/style.scss
+++ b/sass/style.scss
@@ -289,15 +289,17 @@ body{
 // home *************
 
 .homecontent{
-  background-image: url(imgs/compuwire.gif);
-  background-color: $blanco;
   width: 100%;
   height:100vh;
-  background-repeat: no-repeat;
-  background-size:  60% 60%;
-  background-position: bottom center;
+
   position: relative;
   @include desktop{
+    background-image: url(imgs/compuwire.gif);
+    background-color: $blanco;
+    background-repeat: no-repeat;
+    background-size:  60% 60%;
+    background-position: bottom center;
+    position: relative;
     background-size:  35% 50%;
     background-position: bottom right;
   }
@@ -310,11 +312,19 @@ body{
       top:5%;
     }
     @include phone{
-      top: 0px;
+      top: 50px;
       width: 100%;
     }
     
    
+  }
+ 
+  img{
+    display: none;
+    @include phone{
+      display: block;
+    }
+    width: 100%;
   }
   h2{
     font-family: $primaryfont;
@@ -368,3 +378,4 @@ a{
     text-align: center;
   }
 }
+
