coming soon page

--- a/css/style.css
+++ b/css/style.css
@@ -392,5 +392,15 @@ a {
     text-align: center;
   }
 }
+.notfound {
+  padding-top: 50px;
+  width: 50%;
+}
+.notfound img {
+  width: 100%;
+}
+.notfound h1 {
+  font-family: "geomanistregular";
+}
 
 /*# sourceMappingURL=style.css.map */
