--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -24,6 +24,7 @@ $italicfont: 'geomanistitalic';
 $boldfont:  'geomanistbold';
 $lightfont: 'geomanistlight';
 $ultrafont: 'geomanistultra';
+$titlefont:'Fjalla One', sans-serif;
 
 // colors
 $morado:#0D0745;
