--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ body {
 .leftnav {
   display: block;
   background-color: #FEC195;
-  position: absolute;
+  position: fixed;
   left: 0px;
   top: 0px;
   width: 10%;
