--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -24,8 +24,7 @@ $italicfont: 'geomanistitalic';
 $boldfont:  'geomanistbold';
 $lightfont: 'geomanistlight';
 $ultrafont: 'geomanistultra';
-$titlefont:'Fjalla One', sans-serif;
-
+$titlefont:'geomanistregular';
 // colors
 $morado:#0D0745;
 $azuloscuro:#130D6F;
