--- a/css/contact.css
+++ b/css/contact.css
@@ -2,7 +2,7 @@
   font-family: "geomanistregular";
   width: 100%;
   height: 100vh;
-  margin-top: 50px;
+  margin-top: 30px;
   padding-top: 0px;
 }
 @media (min-width: 800px) {
@@ -18,18 +18,22 @@
 }
 .emailicon img {
   width: 30px;
+  display: block;
+}
+.emailicon svg {
+  width: 30px;
 }
 .emailicon p {
   display: inline;
 }
 @media (min-width: 800px) {
   .emailicon {
-    margin-bottom: 0px;
+    margin-bottom: 20px;
   }
 }
 
 .contactform h1 {
-  font-family: "Fjalla One", sans-serif;
+  font-family: "geomanistregular";
 }
 .contactform h3 {
   font-size: 36px;
@@ -46,8 +50,8 @@ form {
 form label {
   width: 100%;
   display: block;
-  font-size: 24px;
-  font-family: "Fjalla One", sans-serif;
+  font-size: 21px;
+  font-family: "geomanistbold";
 }
 form input, form textarea, form select {
   width: 100%;
@@ -98,16 +102,18 @@ form input[type=submit]:hover {
 }
 
 .success {
+  font-family: "geomanistregular";
   color: #4ac789;
 }
 
 .error {
+  font-family: "geomanistregular";
   color: crimson;
 }
 
 .popup {
-  color: #FF9190;
-  font-size: 14px;
+  color: white;
+  font-size: 18px;
   border-radius: 5px;
   transition: opacity 0.1s linear;
   position: relative;
@@ -119,7 +125,7 @@ form input[type=submit]:hover {
 }
 
 .popup p {
-  font-size: 14px;
+  font-size: 18px;
   background-color: #5E72EB;
   width: 100%;
   line-height: auto;
@@ -129,11 +135,6 @@ form input[type=submit]:hover {
 @media (min-width: 800px) {
   .popup p {
     width: 33%;
-  }
-}
-@media (max-width: 1300px) {
-  .popup p {
-    width: 80%;
   }
 }
 @media (max-width: 800px) {
