--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -4,7 +4,7 @@
     font-family: $primaryfont;
     width: 100%;
     height: 100vh;
-    margin-top: 50px;
+    margin-top: 30px;
     padding-top: 0px;
     @include desktop{
         width: 50%;
@@ -13,16 +13,21 @@
     }
     
 }
+
 .emailicon{
     margin-bottom: 20px;
     img{
         width: 30px;
+        display: block;
+    }
+    svg{
+      width: 30px;
     }
     p{
         display: inline;
     }
     @include desktop{
-        margin-bottom: 0px;
+      margin-bottom: 20px;
     }
 }
 
@@ -46,8 +51,8 @@ margin: 0 auto;
 label{
 width: 100%;
 display: block;
-font-size: 24px;
-font-family: $titlefont;
+font-size: 21px;
+font-family: $boldfont;
 }
 input, textarea, select{
 width: 100%;
@@ -98,14 +103,16 @@ margin-top: 150px;
 
 // validation
 .success{
+  font-family: $primaryfont;
 color: rgb(74, 199, 137);
 }
 .error{
+  font-family: $primaryfont;
 color: crimson;
 }
 .popup{
-color: $rosa;
-font-size: 14px;
+color: white;
+font-size: 18px;
 border-radius: 5px;
 transition: opacity 0.1s linear;
 position: relative;
@@ -115,7 +122,7 @@ opacity: 0;
 opacity: 1;
 }
 .popup p{
-font-size: 14px;
+font-size: 18px;
 background-color: $azul;
 width: 100%;
 line-height: auto;
@@ -124,9 +131,7 @@ border-radius: 5px;
 @include desktop{
 width: 33%;
 }
-@include ipad{
-width: 80%;
-}
+
 @include phone{
 width: 100%;
 }
