fixed title position

--- a/css/soon.css
+++ b/css/soon.css
@@ -10,7 +10,7 @@
 }
 .comingsoon .container h1 {
   color: #fff;
-  font-family: "Fjalla One", sans-serif;
+  font-family: "geomanistregular";
   font-size: 120px;
   margin: 0;
   line-height: 110px;
