--- a/css/title.css
+++ b/css/title.css
@@ -1,21 +1,7 @@
-.homecontent{
-    position: relative;
-}
-.container {
-    top: -130px;
-    left: 0px;
-    display: block;
-    position: absolute;
-    display: block;
-    width: 700px;
-}
 .container h1 {
     color: #fff;
-   
-    font-size: 74px;
+    font-size: 42px;
     margin: 0;
-    line-height:110px;
-    letter-spacing: 2px;
 }
 .title {
     display: block;
@@ -25,19 +11,18 @@
 .title span {
     display: block;
     float: left;
-    text-shadow: #0D0745 1px 1px, #0D0745 2px 2px, #0D0745 3px 3px, #0D0745 4px 4px, #0D0745 5px 5px, #0D0745 6px 6px;
     min-width: 10px;
     min-height: 10px;
     position: relative;
 }
 .title:nth-child(1) {
-    color: #FF9190;
+    color: black;
 }
 .title:nth-child(2) {
-    color: #5E72EB;
+    color: black;
 }
 .title:nth-child(3) {
-    color: #FEC195;
+    color: black;
 }
 .title2{
     margin-top: 100px;
@@ -50,7 +35,7 @@
 .title2{
     display: block;
     margin-top: 0px;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: "geomanistregular";
 }
 }
 
