--- a/sass/about.scss
+++ b/sass/about.scss
@@ -41,6 +41,9 @@
         margin-bottom: 20px;
         margin-left: 20px;
     }
+    @include desktop{
+        margin-top: 50px;
+    }
 }
 .center2{
     text-align: center;
@@ -59,6 +62,7 @@
         padding: 5px;
     }
     @include desktop{
+        margin-top: 50px;
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
