--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,49 +1,27 @@
 // sass --watch sass/style.scss:css/style.css
 @import 'mixins';
 
-// colors
-$morado:#0D0745;
-$azuloscuro:#130D6F;
-$azul:#5E72EB;
-$rosa:#FF9190;
-$naranja:#FEC195;
-$gris:#a3a3a3;
-$blanco:#FCFCFC;
-
-//fonts
-$primaryfont: 'geomanistregular';
-$italicfont: 'geomanistitalic'; 
-$boldfont:  'geomanistbold';
-$lightfont: 'geomanistlight';
-$ultrafont: 'geomanistultra';
-
-$titlefont:'geomanistregular';
-
 *{
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
-
 
 .fixedtop{
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
 }
 
-
-
 .margins{
-    width: 80%;
-    margin: 0 auto;
-    @include phone{
-      width: 95%;
-    }
-    @include ipad{
-      width: 90%;
-    }
-
+  width: 80%;
+  margin: 0 auto;
+  @include phone{
+    width: 95%;
+  }
+  @include ipad{
+    width: 90%;
+  }
 }
 .marginleft{
   margin-left: 15%;
@@ -66,99 +44,96 @@ $titlefont:'geomanistregular';
 
 /*menuToggle*/
 #menuToggle {
-    display: block;
-    position: relative;
-    top: 20px;
-    right: 0px;
-    z-index: 1;
-    -webkit-user-select: none;
-    user-select: none;
-    width: 100%;
-    @include desktop{
-        display: none;
-    }
-    @include ipad{
-      display: block;
-      right: 15px;
-      width: 105%;
-    }
+  display: block;
+  position: relative;
+  top: 20px;
+  right: 0px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+  width: 100%;
+  @include desktop{
+    display: none;
   }
-  #menuToggle a {
-    color: $azuloscuro;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    text-align: center;
-    font-size: 21px;
-    font-family: $primaryfont;
+  @include ipad{
+    display: none;
+    right: 15px;
+    width: 105%;
   }
-  #menuToggle a:hover {
-    color: $azul;
-  }
-  #menuToggle input {
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -2px;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 2;
-    -webkit-touch-callout: none;
-  }
-  #menuToggle span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    background: $morado;
-    border-radius: 3px;
-    z-index: 1;
-    transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-  }
-  #menuToggle span:first-child {
-    transform-origin: 0% 0%;
-  }
-  #menuToggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-  }
-  #menuToggle input:checked ~ span {
-    opacity: 1;
-    transform: rotate(45deg) translate(-2px, -1px);
-    background:$morado;
-  }
-  #menuToggle input:checked ~ span:nth-last-child(3) {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-  #menuToggle input:checked ~ span:nth-last-child(2) {
-    transform: rotate(-45deg) translate(0, -1px);
-  }
-  #menuToggle input:checked ~ ul {
-    transform: none;
-  }
-
-  #menu {
-    position: absolute;
-    width: 120%;
-    margin: -100px 0 0 -40px;
-    padding: 20px;
-    padding-top: 125px;
-    background:$naranja;
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  }
-  #menu li {
-    padding: 10px 0;
-    font-size: 1em;
-  }  
-/*end menuToggle*/
-
+}
+#menuToggle a {
+  color: $azuloscuro;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  text-align: center;
+  font-size: 21px;
+  font-family: $primaryfont;
+}
+#menuToggle a:hover {
+  color: $azul;
+}
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -2px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  -webkit-touch-callout: none;
+}
+#menuToggle span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: $morado;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background:$morado;
+}
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+#menu {
+  position: absolute;
+  width: 120%;
+  margin: -100px 0 0 -40px;
+  padding: 20px;
+  padding-top: 125px;
+  background:$naranja;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+#menu li {
+  padding: 10px 0;
+  font-size: 1em;
+}  
 /*mobile logo*/
 .tinylogo img{
   width: 30px;
@@ -172,7 +147,6 @@ $titlefont:'geomanistregular';
     display: block;
   }
 }
-
 // left nav ***********************
 /*logo*/
 .logo {
@@ -181,18 +155,17 @@ $titlefont:'geomanistregular';
   flex-wrap: wrap;
   width: 100px;
   h1{
-      background: url("../imgs/logomorado.svg");
-      background-size: cover;
-      width: 80px;
-      height: 80px;
-      text-indent: -9999px;
+    background: url("../imgs/logomorado.svg");
+    background-size: cover;
+    width: 80px;
+    height: 80px;
+    text-indent: -9999px;
   }
   h1 a {
-      background-image: url("../imgs/logorosa.svg");
-      background-size: cover;
+    background-image: url("../imgs/logorosa.svg");
+    background-size: cover;
   }
 }
-
 body{
   position: relative;
   background-color: $blanco;
@@ -206,16 +179,16 @@ body{
   width: 10%;
   height: 100vh;
   letter-spacing: 2px;
-
   transition-delay: 0s;
   transition-duration: 0.4s;
   transition-property: all;
   transition-timing-function: line;
-
   @include ipad{
     display: none;
   }
-
+  @include phone{
+    display: none;
+  }
   .logo{
     margin: 0 auto;
     padding: 20px;
@@ -227,17 +200,16 @@ body{
     font-family: $titlefont;
     top: 30%;  
     left: 25%;
-
     transition-delay: 0s;
     transition-duration: 0.4s;
     transition-property: all;
     transition-timing-function: line;
-
     a{
       text-decoration: none;
       color: black;
       display: block;
       padding: 15px;
+      font-size: 18px;
     }
     a:hover{
       color: $azul;
@@ -250,16 +222,15 @@ body{
     position: absolute;
     bottom: 20px;
     padding: 20px;
-    left: 20%;
+    left: 15%;
     font-family: $primaryfont;
-
     transition-delay: 0s;
     transition-duration: 0.4s;
     transition-property: all;
     transition-timing-function: line;
     svg{
-      padding: 5px;
-      width: 30px;
+      padding: 4px;
+      width: 25px;
       fill:black;
     }
     svg:hover{
@@ -287,23 +258,24 @@ body{
   .socialmedia{
     left: 30%;
   }
-
 }
-
-
 // home *************
-
 .homecontent{
   width: 100%;
   height:100vh;
-
   position: relative;
   @include desktop{
     background-image: url(imgs/compuwire.gif);
     background-color: $blanco;
     background-repeat: no-repeat;
-    background-size:  60% 60%;
-    background-position: bottom center;
+    position: relative;
+    background-size:  35% 50%;
+    background-position: bottom right;
+  }
+  @include ipad{
+    background-image: url(imgs/compuwire.gif);
+    background-color: $blanco;
+    background-repeat: no-repeat;
     position: relative;
     background-size:  35% 50%;
     background-position: bottom right;
@@ -314,29 +286,36 @@ body{
     top:20%; 
     @include ipad{
       position: absolute;
-      top:5%;
+      top:100px;
     }
     @include phone{
       top: 50px;
       width: 100%;
     }
-    
-   
   }
- 
   img{
     display: none;
+    width: 100%;
     @include phone{
       display: block;
     }
-    width: 100%;
+    @include ipad{
+      display: none;
+    }
   }
   h2{
     font-family: $primaryfont;
     font-size: 60px;
-
     @include ipad{
       font-size: 36px;
+    }
+    @include phone{
+      font-size: 36px;
+    }
+  }
+  h1{
+    @include phone{
+      font-size: 21px;
     }
   }
   .center{
@@ -353,7 +332,6 @@ body{
     font-family: $titlefont;
   }
 }
-
 .cta{
   font-size: 21px;
   border: none;
@@ -367,6 +345,7 @@ body{
   letter-spacing: 1px;
   background-image: linear-gradient(to left,$rosa,$morado,$rosa);
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 a{
   text-decoration: none;
@@ -374,7 +353,6 @@ a{
 .cta:hover{
   background-position: right;
 }
-
 @include phone{
   .cta{
     margin-bottom: 20px;
@@ -383,7 +361,6 @@ a{
     text-align: center;
   }
 }
-
 // page not found
 .notfound{
   padding-top: 50px;
@@ -393,5 +370,27 @@ a{
   }
   h1{
     font-family: $primaryfont;
+  }
+}
+.ipadnav{
+  font-family: $primaryfont;
+  font-size: 21px;
+  a{
+    padding-right: 20px;
+    color: $morado;
+  }
+  a:hover{
+    color: $rosa;
+  }
+  @include phone{
+    display: none;
+  }
+  @include desktop{
+    display: none;
+  }
+  @include ipad{
+    display: block;
+    position: fixed;
+    top: 20px;
   }
 }
