--- a/css/about.css
+++ b/css/about.css
@@ -10,13 +10,15 @@
   margin-bottom: 20px;
 }
 .aboutcontent h2 {
-  margin-bottom: 20px;
   letter-spacing: 2px;
 }
 .aboutcontent svg {
   fill: #5E72EB;
   stroke: #5E72EB;
   width: 15px;
+}
+.aboutcontent svg:hover {
+  stroke: #FF9190;
 }
 .aboutcontent .download {
   text-decoration: none;
@@ -26,7 +28,7 @@
 .aboutcontent .download:hover {
   color: #FF9190;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .aboutcontent {
     width: 90%;
   }
@@ -43,7 +45,7 @@
   margin-bottom: 20px;
   margin-left: 20px;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .process {
     margin-top: 50px;
   }
@@ -67,16 +69,16 @@
   list-style: none;
   padding: 5px;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .skillcontainer {
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 20px;
   }
   .skillcontainer h3 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .skillcontainer ul {
     margin-bottom: 20px;
@@ -87,12 +89,25 @@
   width: 90%;
   margin: 0 auto;
   text-align: center;
+  margin-bottom: 20px;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .containercenter {
     width: 60%;
-    margin-top: 50px;
+    margin-top: 20px;
   }
+}
+
+.resume {
+  margin-bottom: 20px;
+}
+.resume svg {
+  fill: white;
+  stroke: #5E72EB;
+  width: 15px;
+}
+.resume svg:hover {
+  stroke: #FF9190;
 }
 
 /*# sourceMappingURL=about.css.map */
