--- a/css/contact.css
+++ b/css/contact.css
@@ -4,8 +4,9 @@
   height: 100vh;
   margin-top: 30px;
   padding-top: 0px;
+  margin-bottom: 20px;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .contactform {
     width: 50%;
     margin-top: 0px;
@@ -26,7 +27,7 @@
 .emailicon p {
   display: inline;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .emailicon {
     margin-bottom: 20px;
   }
@@ -77,6 +78,7 @@ form input[type=submit] {
   letter-spacing: 1px;
   background-image: linear-gradient(to left, #FF9190, #0D0745, #FF9190);
   width: 100%;
+  margin-bottom: 20px;
 }
 form input[type=submit]:hover {
   background-color: #FF9190;
@@ -95,7 +97,7 @@ form input[type=submit]:hover {
   margin-right: 10px;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .contacttext {
     margin-top: 150px;
   }
@@ -132,7 +134,7 @@ form input[type=submit]:hover {
   padding-left: 10px;
   border-radius: 5px;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .popup p {
     width: 33%;
   }
@@ -158,7 +160,7 @@ form input[type=submit]:hover {
   height: 100vh;
   position: relative;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .bgcontact {
     background-image: url(../imgs/logowiggle.gif);
     background-color: #FCFCFC;
