--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
     width: 95%;
   }
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   .margins {
     width: 90%;
   }
@@ -31,7 +31,7 @@
 .marginleft {
   margin-left: 15%;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   .marginleft {
     margin-left: 0px;
     width: 90%;
@@ -63,14 +63,14 @@
   user-select: none;
   width: 100%;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   #menuToggle {
     display: none;
   }
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   #menuToggle {
-    display: block;
+    display: none;
     right: 15px;
     width: 105%;
   }
@@ -169,12 +169,12 @@
   top: 20px;
   right: 20px;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .tinylogo img {
     display: none;
   }
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   .tinylogo img {
     display: block;
   }
@@ -218,7 +218,12 @@ body {
   transition-property: all;
   transition-timing-function: line;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
+  .leftnav {
+    display: none;
+  }
+}
+@media (max-width: 800px) {
   .leftnav {
     display: none;
   }
@@ -244,6 +249,7 @@ body {
   color: black;
   display: block;
   padding: 15px;
+  font-size: 18px;
 }
 .leftnav .menuRegular a:hover {
   color: #5E72EB;
@@ -255,7 +261,7 @@ body {
   position: absolute;
   bottom: 20px;
   padding: 20px;
-  left: 20%;
+  left: 15%;
   font-family: "geomanistregular";
   transition-delay: 0s;
   transition-duration: 0.4s;
@@ -263,8 +269,8 @@ body {
   transition-timing-function: line;
 }
 .leftnav .socialmedia svg {
-  padding: 5px;
-  width: 30px;
+  padding: 4px;
+  width: 25px;
   fill: black;
 }
 .leftnav .socialmedia svg:hover {
@@ -298,13 +304,21 @@ body {
   height: 100vh;
   position: relative;
 }
-@media (min-width: 800px) {
+@media (min-width: 1300px) {
   .homecontent {
     background-image: url(imgs/compuwire.gif);
     background-color: #FCFCFC;
     background-repeat: no-repeat;
-    background-size: 60% 60%;
-    background-position: bottom center;
+    position: relative;
+    background-size: 35% 50%;
+    background-position: bottom right;
+  }
+}
+@media (max-width: 1300px) and (min-width: 800px) {
+  .homecontent {
+    background-image: url(imgs/compuwire.gif);
+    background-color: #FCFCFC;
+    background-repeat: no-repeat;
     position: relative;
     background-size: 35% 50%;
     background-position: bottom right;
@@ -315,10 +329,10 @@ body {
   width: 80%;
   top: 20%;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   .homecontent .hometext {
     position: absolute;
-    top: 5%;
+    top: 100px;
   }
 }
 @media (max-width: 800px) {
@@ -336,22 +350,37 @@ body {
     display: block;
   }
 }
+@media (max-width: 1300px) and (min-width: 800px) {
+  .homecontent img {
+    display: none;
+  }
+}
 .homecontent h2 {
   font-family: "geomanistregular";
   font-size: 60px;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   .homecontent h2 {
     font-size: 36px;
   }
 }
-@media (min-width: 800px) {
+@media (max-width: 800px) {
+  .homecontent h2 {
+    font-size: 36px;
+  }
+}
+@media (max-width: 800px) {
+  .homecontent h1 {
+    font-size: 21px;
+  }
+}
+@media (min-width: 1300px) {
   .homecontent .center {
     margin-top: 80px;
     margin-bottom: 20px;
   }
 }
-@media (max-width: 1300px) {
+@media (max-width: 1300px) and (min-width: 800px) {
   .homecontent .center {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -401,6 +430,35 @@ a {
 }
 .notfound h1 {
   font-family: "geomanistregular";
+}
+
+.ipadnav {
+  font-family: "geomanistregular";
+  font-size: 21px;
+}
+.ipadnav a {
+  padding-right: 20px;
+  color: #0D0745;
+}
+.ipadnav a:hover {
+  color: #FF9190;
+}
+@media (max-width: 800px) {
+  .ipadnav {
+    display: none;
+  }
+}
+@media (min-width: 1300px) {
+  .ipadnav {
+    display: none;
+  }
+}
+@media (max-width: 1300px) and (min-width: 800px) {
+  .ipadnav {
+    display: block;
+    position: fixed;
+    top: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
