--- a/sass/work.scss
+++ b/sass/work.scss
@@ -11,14 +11,17 @@
     img{
         width: 100%;
     }
-    .cards{
-        display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(400px, 1fr));
-        column-gap: 20px;
-        row-gap: 40px;
-    }
+}
+.cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    column-gap: 20px;
+    row-gap: 40px;
     a{
         text-decoration: none;
         color: black;
+    }
+    h3{
+        font-family: $lightfont;
     }
 }
