--- a/sass/style.scss
+++ b/sass/style.scss
@@ -318,7 +318,7 @@ body{
       font-size: 21px;
     }
   }
-  .center{
+  .center3{
     @include desktop{
       margin-top: 80px;
       margin-bottom: 20px;
