--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,10 @@ body {
   background-color: #FCFCFC;
 }
 
+html {
+  background-color: #FCFCFC;
+}
+
 .leftnav {
   display: block;
   background-color: #FEC195;
