--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -44,9 +44,15 @@ $patchespath:#E9DFD4;
 $patcheswhite:#F9F9FF;
 $patcheswind:#EDEFF1;
 $patchesair:#EBEAE3;
+
 $scoop: #FFA8A7;
 $scoophover:#4AB0B2;
 $scoopcolor:#A47A53;
+$scoopgreen:#A5C379;
+$scooporange:#F4C68A;
+$scoopyellow:#F9EEA0;
+$scooplight:#F4F0ED;
+
 $secret:#558EC5;
 $secrethover:#F8D996;
 $lila:#CDC9FC;
