--- a/sass/style.scss
+++ b/sass/style.scss
@@ -170,6 +170,9 @@ body{
   position: relative;
   background-color: $blanco;
 }
+html{
+  background-color: $blanco;
+}
 .leftnav{
   display: block;
   background-color: $naranja;
