--- a/css/patches.css
+++ b/css/patches.css
@@ -74,11 +74,25 @@ img {
     width: 300px;
   }
 }
+@media (min-width: 1300px) {
+  .caseproducts {
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (min-width: 1300px) {
+  .casecolors {
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+}
 
 .colors {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  margin-top: 20px;
 }
 .colors .color {
   padding: 10px;
@@ -173,6 +187,12 @@ img {
 .figma iframe {
   width: 100%;
 }
+@media (min-width: 1300px) {
+  .figma {
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+}
 
 .summary .resume a {
   color: #0D0745;
@@ -196,6 +216,12 @@ img {
 @media (max-width: 800px) {
   .summary {
     grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 1300px) {
+  .summary {
+    padding-top: 50px;
+    margin-bottom: 50px;
   }
 }
 
@@ -226,6 +252,12 @@ img {
     grid-template-columns: 1fr;
   }
 }
+@media (min-width: 1300px) {
+  .casefonts {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+}
 
 .more h2 {
   padding: 15px;
@@ -235,6 +267,14 @@ img {
 
 .casesocial {
   padding-top: 20px;
+}
+@media (min-width: 1300px) {
+  .casesocial {
+    margin-bottom: 50px;
+  }
+  .casesocial p {
+    margin-bottom: 50px;
+  }
 }
 
 /*# sourceMappingURL=patches.css.map */
