--- a/sass/about.scss
+++ b/sass/about.scss
@@ -39,12 +39,30 @@
 }
 .process{
     margin-bottom: 20px;
+    h2{
+        margin-bottom: 10px;
+    }
     li{
+        margin-top: 20px;
         margin-bottom: 20px;
-        margin-left: 20px;
+        margin-left: 15px;
     }
     @include desktop{
-        margin-top: 50px;
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+    .limage{
+        float: right;
+        width: 25%;
+        img{
+            width: 100%;
+        }
+        @include phone{
+            width: 100%;
+        }
+    }
+    .rimage{
+        padding-top: 20px;
     }
 }
 .center2{
@@ -61,9 +79,22 @@
     }
     li{
         list-style: none;
-        padding: 5px;
+        padding-top: 10px;
     }
     @include desktop{
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+        h3{
+            margin-bottom: 10px;
+        }
+        ul{
+            margin-bottom: 20px;
+        }
+    }
+    @include ipad{
         margin-top: 20px;
         display: flex;
         justify-content: space-between;
@@ -86,6 +117,9 @@
         width: 60%;
         margin-top: 20px;
     }
+}
+.noleft{
+    clear: both;
 }
 .resume{
     margin-bottom: 20px;
