--- a/sass/about.scss
+++ b/sass/about.scss
@@ -33,6 +33,9 @@
     @include desktop{
         width: 90%;
     }
+    @include ipad{
+        padding-top: 20px;
+      }
 }
 .resume{
     margin-bottom: 20px;
