secret menu case study

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -54,7 +54,10 @@ $scoopyellow:#F9EEA0;
 $scooplight:#F4F0ED;
 
 $secret:#558EC5;
-$secrethover:#F8D996;
+$secrethover:#F8D68C;
+$secretblack:#4C4C4C;
+$secretpurple:#ABA5EB;
+
 $lila:#CDC9FC;
 $lilahover:#6D85B3;
 $thedress:#29E1B9;
