diverse dialogue case study

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -60,7 +60,17 @@ $secretpurple:#ABA5EB;
 
 $lila:#CDC9FC;
 $lilahover:#6D85B3;
+
+$thedresswhite:#DEE4E2;
+$thedressyellow:#E0DD36;
 $thedress:#29E1B9;
+$thedressgreen:#35E32A;
+$thedressmagenta:#DC2EE7;
 $thedresshover:#D82731;
-$dd:#128D82;
-$ddhover:#36B3AA;
+$thedressblue:#1F25DD;
+$thedresspurple:#410479;
+$thedressblack:#242424;
+
+$dd:#1FA397;
+$ddhover:#01766D;
+$ddlight:#69DDD0;
