--- a/css/patches.css
+++ b/css/patches.css
@@ -113,6 +113,18 @@ img {
     height: 50px;
   }
 }
+.colors .square {
+  width: 100px;
+  height: 100px;
+  border-radius: 0px;
+  background: #2A3380;
+}
+@media (max-width: 800px) {
+  .colors .square {
+    width: 50px;
+    height: 50px;
+  }
+}
 .colors #blue {
   color: #2A3380;
 }
