--- a/sass/patches.scss
+++ b/sass/patches.scss
@@ -100,6 +100,16 @@ img{
             height: 50px;
         }
     }
+    .square{
+        width: 100px;
+        height: 100px;
+        border-radius: 0px;
+        background: $patches;
+        @include phone{
+            width: 50px;
+            height: 50px;
+        }
+    }
     #blue{
         color: $patches;
     }
