--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -58,8 +58,12 @@ $secrethover:#F8D68C;
 $secretblack:#4C4C4C;
 $secretpurple:#ABA5EB;
 
-$lila:#CDC9FC;
-$lilahover:#6D85B3;
+
+$lilapink:#FF7B89;
+$lilap1:#8A5082;
+$lilap2:#705F93;
+$lilab1:#758EB7;
+$lilab2:#A5CAD2;
 
 $thedresswhite:#DEE4E2;
 $thedressyellow:#E0DD36;
