--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ html {
   font-size: 21px;
   border: none;
   padding: 10px 50px;
-  width: 300px;
+  width: 25%;
   border-radius: 5px;
   cursor: pointer;
   color: white;
@@ -409,7 +409,7 @@ html {
   transition: 0.6s ease;
   letter-spacing: 1px;
   background-image: linear-gradient(to left, #FF9190, #0D0745, #FF9190);
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
