--- a/css/secret.css
+++ b/css/secret.css
@@ -118,4 +118,47 @@
   }
 }
 
+.logito {
+  background-color: black;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+  padding: 20px;
+  position: relative;
+}
+
+.eye {
+  background-color: white;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -34px;
+  margin-top: -34px;
+  overflow: hidden;
+}
+
+.pupil {
+  background-color: black;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -17px;
+  margin-top: -17px;
+}
+
+.eye1 {
+  margin-left: -88px;
+}
+
+.eye2 {
+  margin-left: 20px;
+}
+
 /*# sourceMappingURL=secret.css.map */
