--- a/sass/work.scss
+++ b/sass/work.scss
@@ -25,6 +25,33 @@
         color: black;
     }
     h3{
+        font-family: $primaryfont;
+    }
+    p{
+        margin-top: 10px;
+        font-size: 16px;
         font-family: $lightfont;
+    }
+}
+.navwork{
+    margin-top: 20px;
+    font-family: $primaryfont;
+    a{
+        text-decoration: none;
+        color: $azul;
+        margin-right: 20px;
+    }
+    a:hover{
+        color: $naranja;
+    }
+}
+.content{
+    a{
+        text-decoration: none;
+        color: $azul;
+        margin-right: 20px;
+    }
+    a:hover{
+        color: $naranja;
     }
 }
